--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "electron-is-dev": "^1.1.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "nodemon": "^1.19.1",
     "piping": "^1.0.0-rc.4",
     "react": "^16.8.6",
@@ -48,7 +49,9 @@
     "react-router-dom": "5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
+    "webfontloader": "^1.6.28"
   },
   "build": {
     "appId": "com.taskmate",
