--- a/package.json
+++ b/package.json
@@ -5,44 +5,28 @@
   "repository": "https://github.com/prabhu88/TaskMate.git",
   "author": "prabhu88 <s.prabhu.mtech88@gmail.com>",
   "license": "MIT",
-  "private": false,
-  "main": "./main.js",
+  "private": false,  
   "homepage": "./",
   "scripts": {
-    "start": "concurrently \"npm run react-start\" \"npm run server-start\" \"wait-on http://localhost:3000 && npm run electron-dev\"",
-    "react-build": "react-app-rewired build",
-    "react-start": "react-app-rewired start",
-    "server-build": "babel server --out-dir build-server",
-    "server-start": "nodemon --watch server --exec babel-node server/server.js",
-    "electron-dev": "node scripts/dev.js scripts/start.js",
-    "electron-pack": "electron-builder -c.extraMetadata.main='./main.js'",
-    "preelectron-pack": "npm run react-build && npm run server-build"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build"    
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.4",
-    "concurrently": "^4.1.0",
-    "customize-cra": "^0.2.12",
-    "electron": "^5.0.2",
-    "electron-builder": "^20.41.0",
+    "@babel/preset-env": "^7.4.4",    
+    "customize-cra": "^0.2.12",    
     "react-app-rewired": "^2.1.3",
     "react-scripts": "3.0.1",
     "wait-on": "^3.2.0"
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.21.0",
-    "@popperjs/core": "^2.11.6",
-    "app-module-path": "^2.2.0",
+    "@popperjs/core": "^2.11.6",    
     "axios": "^0.18.0",
-    "bootstrap": "^5.2.3",
-    "cors": "^2.8.5",
-    "electron-is-dev": "^1.1.0",
-    "express": "^4.17.1",
+    "bootstrap": "^5.2.3",        
     "lodash": "^4.17.21",
-    "nodemon": "^1.19.1",
-    "piping": "^1.0.0-rc.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^8.0.5",
@@ -52,18 +36,6 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "webfontloader": "^1.6.28"
-  },
-  "build": {
-    "appId": "com.taskmate",
-    "files": [
-      "build/**/**/*",
-      "build-server/**/**/*",
-      "node_modules/**/*",
-      "./main.js"
-    ],
-    "directories": {
-      "buildResources": "assets"
-    }
-  },
+  },  
   "browserslist": []
 }
